Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -111,6 +111,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Deleting cells"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Types of Cells\n",
     "\n",
     "The current cell and every other cell in this lesson has been a markdown cell, meaning that it allows us to write text and stylize that text.  For example, if you surround some text with stars on either side the text **becomes bold**.  That's markdown.\n",
